# Template_FastAPI

./: Full_generate_FastAPI.sh  Generate_Project_FastAPI.sh  LICENSE  README.md  Создание прилож FastAPI_Часть1.md
Scripts/: 1_create_proj.sh  2_structure.sh  3_general_configuration.sh  4_Configuring_DB_models.sh  5_Alembic_Creating_tables.sh  6_Schemes_Pydantic_CRUD.sh  7_Configuring_routes.sh  export_VARS.sh  mk_file_api___init.py  mk_file_api_api_v1_ENTITY.py  mk_file_api_api_v1___init.py  mk_file_api_api_v1_dependencies.py  mk_file_api_api_v1_exceptions.py  mk_file_config.py  (+14 more)
temft/: .env.template  .gitignore  docker-compose.yml  main.py  pyproject.toml
temft/alembic/versions/: 2025_05_20_2154-7ebfd9344363_create_item_table.py
temft/api/api_v1/: __init__.py  dependencies.py  exceptions.py  item.py
temft/core/: config.py  logger.py
temft/crud/: item.py
temft/models/: __init__.py  db_helper.py  item.py
temft/models/mixins/: int_id_pk.py
temft/rename_git/: COMMIT_EDITMSG  index
temft/rename_git/logs/refs/heads/: master
temft/rename_git/refs/heads/: master
temft/schemas/: item.py
temft/temft/: main.py
temft/temft/alembic/versions/: 2025_05_13_1603-5ed6425e7010_create_bot_table.py  2025_05_20_2103-6b6a94e4e91c_create_item_table.py
temft/temft/api/: __init__.py
temft/temft/api/api_v1/: __init__.py  bot.py  item.py
temft/temft/core/: config.py
temft/temft/crud/: bot.py  item.py
temft/temft/models/: __init__.py  bot.py  db_helper.py  item.py
temft/temft/schemas/: bot.py
temft/utils/: __init__.py  case_converter.py  db.py  filters.py
(+51 files in other folders)
