[project]
name = "temft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
